--- a/install.txt
+++ b/install.txt
@@ -7,6 +7,19 @@ add-apt-repository ppa:ethz-asl/common
 
 sudo apt-get update
 
+Installing on Ubuntu with apt-get
+First you must have the ROS repositories which contain the .deb for catkin_tools:
+$ sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros-latest.list'
+$ wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
+Once you have added that repository, run these commands to install catkin_tools:
+$ sudo apt-get update
+$ sudo apt-get install python-catkin-tools
+
+sudo apt-get update
+
+source devel/setup.bash
+
+
 #Eigen
 
 hg clone https://bitbucket.org/eigen/eigen/
@@ -49,36 +62,26 @@ sudo apt-get install ros-indigo-message-*
 sudo apt-get install ros-indigo-geometry-*
 
 # add
-sudo apt-get install freeglut3-dev, sudo apt-get install libglew-dev
+sudo apt-get install freeglut3-dev
+sudo apt-get install libglew-dev
 
 #rovio
 
 git clone https://github.com/ethz-asl/rovio.git
 
+git clone https://github.com/YoungJunSeo/rovio.git
+
 Install with opengl scene
 Additional dependencies: opengl, glut, glew (sudo apt-get install freeglut3-dev, sudo apt-get install libglew-dev)
 #!command
+
 catkin build rovio --cmake-args -DCMAKE_BUILD_TYPE=Release -DMAKE_SCENE=ON
 catkin_make
 
-source devel/setup.bash
-
-
-
-Installing on Ubuntu with apt-get
-First you must have the ROS repositories which contain the .deb for catkin_tools:
-$ sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros-latest.list'
-$ wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
-Once you have added that repository, run these commands to install catkin_tools:
-$ sudo apt-get update
-$ sudo apt-get install python-catkin-tools
-
-
-
 git clone https://github.com/bosch-ros-pkg/usb_cam.git
 
-
 sudo apt-get install v4l-utils
+
 
 
 
